# api/wishlist/domain/wishlist.domain.go
@@ -1,0 +1,5 @@
+package domain
+
+type WishlistRequest struct {
+	PropertyID uint `json:"property_id" validate:"required"`
+}
